--- a/index.html
+++ b/index.html
@@ -5,29 +5,32 @@
     <title>LiftingOfTh3Lourde</title>
 
     <link rel="stylesheet" href="css/pc.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
 
   </head>
   <body>
 
     <div class="navContainer">
       <div class="logo">
-        <p style="color:white;padding-top:5vh;padding-left:5vw;">This is the logo</p>
+        <p id="logoP"><a id="logoText" href="index.html">Logo</a></p>
       </div>
       <div class="menus">
         <ul>
-          <li>page1</li>
-          <li>page2</li>
-          <li>page3</li>
-          <li>page4</li>
-          <li>page5</li>
-          <li>page6</li>
-          <li>page7</li>
+          <li><a href="docs/sync.html">Orientation</a></li>
+          <li><a href="docs/week1.html">Week 1</a></li>
+          <li><a href="docs/week2.html">Week 2</a></li>
+          <li><a href="docs/week3.html">Week 3</a></li>
+          <li><a href="docs/week4.html">Week 4</a></li>
+          <li><a href="docs/week5.html">Week 5</a></li>
+          <li><a href="docs/week6.html">Week 6</a></li>
+          <li><a href="docs/week7.html">Week 7</a></li>
         </ul>
       </div>
     </div>
 
     <div class="landingPage-Container">
-      <h1>There should be content in here</h1>
+      <h1>Index</h1>
+      <p>Brags about how great the site is</p>
     </div>
 
   </body>
